# aquaguard-c-data-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  flowchart.txt
.github/workflows/: ci.yml
docs/: TROUBLESHOOTING.md
include/: http.h  json.h  log.h  sensor.h  shared.h
presentation/: high_level_description.md  low_level_description.md  presentation.html  presentation.md  slides.js  styles.css
rationale/: http.c.md  http.h.md  json.c.md  json.h.md  log.h.md  main.c.md  sensor.c.md  sensor.h.md  shared.h.md  test_parser.c.md
report/: report.md
scripts/: run_all.sh
simulator_py/: gui_simulator.py
src/: http.c  json.c  main.c  sensor.c
tests/: test_alert_mask.c  test_optional_fields.c  test_parser.c  test_required_fields.c
web/: app.js  index.html  style.css
